2005-10-30  Michael Natterer  <mitch@gimp.org>

	Fixed bug #316395:

	* app/actions/dialogs-actions.c (dialogs_dockable_actions)
	* app/actions/quick-mask-actions.c (quick_mask_toggle_actions):
	added tooltips to action entries.

	* app/display/gimpdisplayshell.c (gimp_display_shell_new): use
	gimp_widget_set_accel_help() to set the tooltip so it contains
	the accelerator.

	* app/dialogs/dialogs-constructors.c (dialogs_dockable_constructor):
	attach the dialog's identifier to the dockable widget (hack).

	* app/widgets/gimpdockbook.c (gimp_dockbook_get_tab_widget): use
	the attached identifier to find the action for this dockable in
	the dock's UI manager (HACK HACK). Use the found action to set
	a tooltip with accelerator.

	* app/widgets/gimpwidgets-utils.c (gimp_widget_set_accel_help):
	fixed bug in fallback code what should never be used.

2005-10-30  Michael Natterer  <mitch@gimp.org>

	* app/actions/dialogs-actions.c (dialogs_dockable_actions): removed
	shift+ctrl+t accelerator from dialogs-tool-options because it's
	already taken by view-show-guides. Fixes bug #320196.

2005-10-29  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/user-install-dialog.c: added global "oldgimp_major"
	an "oldgimp_minor" variables.

	(user_install_dialog_run): set them to the version of the gimp
	directory that should be migrated.

	(user_install_migrate_files): skip "menurc" only when migrating
	from 2.0. Fixes bug #317170.

2005-10-29  Michael Natterer  <mitch@gimp.org>

	 Fix bug #145492:

	* app/actions/file-commands.c (file_save_cmd_callback)
	* app/dialogs/file-save-dialog.c (file_save_dialog_save_image):
	set the "file-quit" action insensitive while the image is being
	saved to prevent data loss.

	* app/widgets/gimptoolbox.c (gimp_toolbox_delete_event): activate
	the "file-quit" action instead of calling gimp_exit() directly so
	trying to close the toolbox while saving is impossible too.

2005-10-29  Michael Natterer  <mitch@gimp.org>
